fixed bugs with coloring, added more styling, and made header more robust with buttons

--- a/index.html
+++ b/index.html
@@ -30,98 +30,101 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <table class="table table-hover mb-5">
-        <thead class="thead">
+      <table class="table table-hover table-bordered mb-5">
+        <thead class="thead-light">
           <tr>
-            <th scope="col"></th>
-            <th scope="col" style="width:75%;"></th>
-            <th scope="col"></th>
+            <th scope="col" style="width:10%;"></th>
+            <th scope="col" class="align-middle custom-text-center" style="width:70%;">Daily Events</th>
+            <th scope="col" class="align-middle custom-text-center" style="width:16%;">
+              <button id="saveAllBtn" type="button" class="btn btn-secondary btn-sm my-1">Save All</button>
+              <button id="clearAllBtn" type="button" class="btn btn-secondary btn-sm my-1">Clear All</button>
+            </th>
           </tr>
         </thead>
         <tbody id="schedule">
           <tr>
-            <th scope="row" data-hour="9" id="9">9:00</th>
+            <th scope="row" data-hour="9" id="9" class="align-middle pr-4 custom-text-right">9:00</th>
             <td>
-              <textarea class="form-control" id="text1" rows="2" placeholder="Enter schedule item..."></textarea>
+              <textarea class="form-control" id="text1" rows="2" placeholder="Enter a schedule item..."></textarea>
             </td>
-            <td class="align-middle">
+            <td class="align-middle custom-text-center">
               <button id="btn-9" type="button" class="btn btn-secondary btn-sm p-0 bg-light">
                 <img src="./assets/images/save--v2.png" alt="save event icon" height="32px">
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row" data-hour="10" id="11">10:00</th>
+            <th scope="row" data-hour="10" id="10" class="align-middle pr-4 custom-text-right">10:00</th>
             <td>
               <textarea class="form-control" id="text2" rows="2"></textarea>
             </td>
-            <td class="align-middle">
+            <td class="align-middle custom-text-center">
               <button id="btn-10" type="button" class="btn btn-secondary btn-sm p-0 bg-light">
                 <img src="./assets/images/save--v2.png" alt="save event icon" height="32px">
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row" data-hour="11" id="11">11:00</th>
+            <th scope="row" data-hour="11" id="11"class="align-middle pr-4 custom-text-right">11:00</th>
             <td>
               <textarea class="form-control" id="text3" rows="2"></textarea>
             </td>
-            <td class="align-middle">
+            <td class="align-middle custom-text-center">
               <button id="btn-11" type="button" class="btn btn-secondary btn-sm p-0 bg-light">
                 <img src="./assets/images/save--v2.png" alt="save event icon" height="32px">
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row" data-hour="12" id="12">12:00</th>
+            <th scope="row" data-hour="12" id="12"class="align-middle pr-4 custom-text-right">12:00</th>
             <td>
               <textarea class="form-control" id="text4" rows="2"></textarea>
             </td>
-            <td class="align-middle">
+            <td class="align-middle custom-text-center">
               <button id="btn-12" type="button" class="btn btn-secondary btn-sm p-0 bg-light">
                 <img src="./assets/images/save--v2.png" alt="save event icon" height="32px">
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row" data-hour="13" id="13">1:00</th>
+            <th scope="row" data-hour="13" id="13"class="align-middle pr-4 custom-text-right">1:00</th>
             <td>
               <textarea class="form-control" id="text5" rows="2"></textarea>
             </td>
-            <td class="align-middle">
+            <td class="align-middle custom-text-center">
               <button id="btn-13" type="button" class="btn btn-secondary btn-sm p-0 bg-light">
                 <img src="./assets/images/save--v2.png" alt="save event icon" height="32px">
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row" data-hour="14" id="14">2:00</th>
+            <th scope="row" data-hour="14" id="14"class="align-middle pr-4 custom-text-right">2:00</th>
             <td>
               <textarea class="form-control" id="text6" rows="2"></textarea>
             </td>
-            <td class="align-middle">
+            <td class="align-middle custom-text-center">
               <button id="btn-14" type="button" class="btn btn-secondary btn-sm p-0 bg-light">
                 <img src="./assets/images/save--v2.png" alt="save event icon" height="32px">
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row" data-hour="15" id="15">3:00</th>
+            <th scope="row" data-hour="15" id="15"class="align-middle pr-4 custom-text-right">3:00</th>
             <td>
               <textarea class="form-control" id="text7" rows="2"></textarea>
             </td>
-            <td class="align-middle">
+            <td class="align-middle custom-text-center">
               <button id="btn-15" type="button" class="btn btn-secondary btn-sm p-0 bg-light">
                 <img src="./assets/images/save--v2.png" alt="save event icon" height="32px">
               </button>
             </td>
           </tr>
           <tr>
-            <th scope="row" data-hour="16" id="16">4:00</th>
+            <th scope="row" data-hour="16" id="16"class="align-middle pr-4 custom-text-right">4:00</th>
             <td>
               <textarea class="form-control" id="text8" rows="2"></textarea>
             </td>
-            <td class="align-middle">
+            <td class="align-middle custom-text-center">
               <button id="btn-16" type="button" class="btn btn-secondary btn-sm p-0 bg-light">
                 <img src="./assets/images/save--v2.png" alt="save event icon" height="32px">
               </button>
